@@ -2179,7 +2179,8 @@ test(777, names(DT$b), c("a","b","c"))
 test(778, DT[,sum(a),by=b], data.table(b=c("a","b"),V1=c(3L,3L)))  #2307 retained names length 3 on the length 2 vector result causing it not to print.
 test(779, print(DT[,sum(a),by=b]), output="   b V11: a  32: b  3$")
 
-
+# Test new .GRP binding
+test(780, data.table(a=1:3,b=1:6)[,i:=.GRP,by=a][,i2:=.GRP], data.table(a=1:3,b=1:6,i=rep(1:3,2),i2=1L))
 
 
 # TO DO: add examples of multiple LHS (name and position) and multiple RHS to example(":=")
